--- a/config.yml
+++ b/config.yml
@@ -3,11 +3,11 @@ word_embeddings:
   # Just set the default to empty string to disable the word embeddings
   default: word2vec
   word2vec:
-    path: ../../data/input/word_embeddings/GoogleNews-vectors-negative300.bin
+    path: ./data/GoogleNews-vectors-negative300.bin
     dimension: 300
     binary: True
   glove:
-    path: ../../data/glove.6B.100d.txt
+    path: ./data/glove.6B.100d.txt
     dimension: 100
     length: 400000
 
